--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^26.0.20",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "babel-jest": "^26.6.3",
     "body-parser": "^1.19.0",
     "css-loader": "^5.0.1",
     "faker": "^5.1.0",
@@ -30,6 +31,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.8",
     "@types/express": "^4.17.9",
     "@types/faker": "^5.1.5",
     "cors": "^2.8.5",
